--- a/Zadanie1/index.html
+++ b/Zadanie1/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
-	<link href="css/style.css"/>
-	
+		<title>Moja pierwsza strona</title>
+		<meta charset="uft-8"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	</head>
 	<body>
-		<h1>Nagłówek12</h1>
+		<h1>Naglówek 1</h1>
 	</body>
+</html>
